--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 Descargar</button>
             </div>
             <div class="col-lg-6">
-                <img class="title-image" src="../Digital 5/IMAGENES/IMG_0925.png" alt="iphone-mockup">
+                <img class="title-image" src="../Digital 5/IMAGENES/IMG_0925.png" alt="IMG_0925">
               </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
   <div class="card text-center p-4 shadow testimonio-card">
     <div class="card-body">
       <!-- HTML -->
-<img src="../Digital 5/IMAGENES/fer.jpeg" alt="dog-profile"
+<img src="../Digital 5/IMAGENES/fer.jpeg" alt="fer"
 class="profile-image rounded-circle mx-auto d-block mb-3">
 
       <h5 class="card-title">“Hola! soy Fernando un gusto conocerte, estoy a tu disposición en todo lo que te pueda ayudar para tu idea de diseño.”</h5>
@@ -117,16 +117,16 @@ class="profile-image rounded-circle mx-auto d-block mb-3">
     <h4 class="mb-4">DISEÑOS</h4>
     <div class="row justify-content-center align-items-center">
       <div class="col-6 col-sm-3 mb-3">
-        <img src="../Digital 5/IMAGENES/IMG_0814.jpeg" alt="tc-logo" class="img-fluid" style="max-height: 200px;">
+        <img src="../Digital 5/IMAGENES/IMG_0814.jpeg" alt="IMG_0814" class="img-fluid" style="max-height: 200px;">
       </div>
       <div class="col-6 col-sm-3 mb-3">
-        <img src="IMAGENES/IMG_0804.jpeg" alt="tnw-logo" class="img-fluid" style="max-height: 200px;">
+        <img src="IMAGENES/IMG_0804.jpeg" alt="IMG_0804" class="img-fluid" style="max-height: 200px;">
       </div>
       <div class="col-6 col-sm-3 mb-3">
-        <img src="IMAGENES/IMG_0807.jpeg" alt="biz-insider-logo" class="img-fluid" style="max-height: 200px;">
+        <img src="IMAGENES/IMG_0807.jpeg" alt="IMG_0807" class="img-fluid" style="max-height: 200px;">
       </div>
       <div class="col-6 col-sm-3 mb-3">
-        <img src="IMAGENES/IMG_0903.jpeg" alt="mashable-logo" class="img-fluid" style="max-height: 200px;">
+        <img src="IMAGENES/IMG_0903.jpeg" alt="IMG_0903" class="img-fluid" style="max-height: 200px;">
       </div>
     </div>
   </div>
